<resources>
    <string name="app_name">HouseholdFinanceManager</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txt_please_wait">Mohon Menunggu...</string>

    <!--Titles-->

    <string name="first_slide_title">Benefit App</string>
    <string name="second_slide_title">Common Problems</string>
    <string name="third_slide_title">Providing Solutions</string>
    <string name="fourth_slide_title">Invite to use</string>


    <!--Descriptions-->
    <string name="first_slide_desc">Get benefits and structured family financial management</string>
    <string name="txt_let_get_desc">Common Problems</string>
    <string name="txtlogin">Login</string>
    <string name="txt_submit">Masuk</string>
    <string name="txt_belum_punya_akun">Belum punya akun ?</string>
    <string name="tt_daftar_disini">Daftar DISINI</string>
    <string name="txt_email">Email</string>
    <string name="txt_kata_sandi">Kata Sandi</string>
    <string name="txt_first_name">Nama Depan</string>
    <string name="txt_last_name">Nama Belakang</string>
    <string name="txt_username">Nama Pengguna</string>
    <string name="txt_nomor_ponsel">Nomor Ponsel</string>
    <string name="txt_jumlah_anak">Jumlah Anak</string>
    <string name="txt_alamat_tempat_tinggal">Alamat Tempat Tinggal</string>
    <string name="required">Wajib diisi</string>
    <string name="txt_manajemen_keuangan_rumah_tangga">Manajemen Keuangan Rumah Tangga</string>
    <string name="txt_buat_akun">BUAT AKUN</string>
    <string name="txt_daftar">DAFTAR</string>
    <string name="txt_jenis_pekerjaan">Jenis Pekerjaan</string>

</resources>