<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user.RegistrationActivity">

        <ProgressBar
            android:id="@+id/progress_register"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />


        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/txt_buat_akun"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_firstname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/txt_first_name"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_lastname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_firstname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_last_name"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_lastname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_username"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_pekerjaan"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_username"
            android:hint="@string/txt_jenis_pekerjaan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/input_pekerjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:ignore="KeyboardInaccessibleWidget" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_pekerjaan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_email"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_kata_sandi"
            android:padding="10dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_alamat_tempat_tinggal"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="255" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_nohp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_address"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_nomor_ponsel"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_count_child"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_nohp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/txt_jumlah_anak"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_jumlah_anak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="2" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_count_child"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:padding="10dp"
            android:text="@string/txt_daftar" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>